--- a/assets/index.html
+++ b/assets/index.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/.statser/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/.statser/css/open-iconic-bootstrap.min.css">
     <title>statser dashboard</title>
   </head>
   <body>
 
     <div class="container">
-      <h1 class="display-3">statser</h1>
+      <h1 class="display-4">statser</h1>
+      <p class="lead">
+        Find the most important operation metrics, statistics and health checkpoints
+        on statser below.
+      </p>
 
-      <table id="stats" class="table">
-        <thead>
-          <tr>
-            <th>statistic</th>
-            <th>rate per second</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <p>
+        This page's content is updated every <span id="interval">10</span> seconds via
+        <abbr title="Server-sent events">SSE</abbr>. If this doesn't work for you,
+        please try the <a href="/.statser.json" title="json endpoint">JSON endpoint</a> instead.
+      </p>
+
+      <h2>Health</h2>
+
+      <p>Health checks on statser's main operational components.</p>
+
+      <div>
+        <dl id="health" class="row"></dl>
+      </div>
+
+      <h2>Metrics</h2>
+
+      <p>
+        Statistics on some of the most important performance characteristics of
+        this statser instance.
+      </p>
+
+      <div>
+        <table id="stats" class="table">
+          <thead class="thead-default">
+            <tr>
+              <th>statistic</th>
+              <th>rate (per second)</th>
+              <th>average</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+
+        <p class="small">
+          These values do not contain any historical data but
+          rather the snapshot of the update interval mentioned above.
+        </p>
+      </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="/.statser/js/bootstrap.min.js"></script>
-    <script src="/.statser/stats.js"></script>
+    <script src="/.statser/js/stats.js"></script>
   </body>
 </html>
