dashboard: add basic legend

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,6 +13,9 @@
       stroke: #007bff;
       stroke-width: 3px;
     }
+    .legend {
+      font-size: 80%;
+    }
     </style>
   </head>
   <body>
