client: reorganize assets setup

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <script src="/.statser/app.js"></script>
+    <script src="/.statser/js/app.js"></script>
   </body>
 </html>
 <!-- vim: set et sw=2 sts=2: -->
